WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24436
With ACCELERATED_COMPOSITING turned on ASSERT in RenderLayer::updateClipRects()
https://bugs.webkit.org/show_bug.cgi?id=24436
Summary
With ACCELERATED_COMPOSITING turned on ASSERT in RenderLayer::updateClipRects()
Chris Marrin
Reported
2009-03-06 15:46:16 PST
Turn on ACCELERATED_COMPOSITING, build debug and run the attached test case. You should see an assert at: RenderLayer.cpp:2432
Attachments
Test case showing bug
(3.49 KB, text/html)
2009-03-06 15:47 PST
,
Chris Marrin
no flags
Details
Patch
(2.87 KB, patch)
2009-03-23 17:20 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Marrin
Comment 1
2009-03-06 15:47:00 PST
Created
attachment 28374
[details]
Test case showing bug
Simon Fraser (smfr)
Comment 2
2009-03-23 17:11:42 PDT
The problem here is that we use different clip rect roots for painting, and for hit testing. For painting, every composited layer is a clipping root. For hit testing (which happens in software), only elements with transforms are clipping roots. For now, I think the best solution is to compute temporary clip rects any time we're hit testing in a page with composited content.
Simon Fraser (smfr)
Comment 3
2009-03-23 17:20:26 PDT
Created
attachment 28879
[details]
Patch
Darin Adler
Comment 4
2009-03-23 17:34:25 PDT
Comment on
attachment 28879
[details]
Patch Is this going to increase the stack size used by hitTestLayer? How big is ClipRects? I don't think it's good to name a boolean "temporaryClipRects". That sounds like the name of a variable that stores somre rects in it.
Simon Fraser (smfr)
Comment 5
2009-03-23 18:27:53 PDT
(In reply to
comment #4
)
> (From update of
attachment 28879
[details]
[review]) > Is this going to increase the stack size used by hitTestLayer? How big is > ClipRects?
ClipRects is 3 * sizeof(IntRect) + 4 bytes. I think it's OK to use more stack space for hit testing transformed elements, since they are uncommon and having deeply nested ones will be very rare.
> I don't think it's good to name a boolean "temporaryClipRects". That sounds > like the name of a variable that stores somre rects in it.
Agreed, I can fix.
Dave Hyatt
Comment 6
2009-03-24 11:44:34 PDT
Comment on
attachment 28879
[details]
Patch r=me
Simon Fraser (smfr)
Comment 7
2009-03-24 14:03:47 PDT
http://trac.webkit.org/changeset/41951
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug